# pytetris

./: .pylintrc  README.md  pyproject.toml
pytetris/: main.py
tests/: test_pytetris.py
